tests/NormalTests/paczka1/fuzzy1/85700052.err
Error in line 2: Lzg3H S785 77,1
Error in line 9: S785 S877 ,7
Error in line 21: Lzg3H S877 -1,7
Error in line 28: eoXHY1b S785 6,7
Error in line 18: Lzg3H S877 5,5
